--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,32 @@
 <div class="home__container">
-  <app-card></app-card>
+  <app-card
+    gameCover="assets/bt-5.jpg"
+    gameLabel="offer"
+    gamePrice="R$123,34"
+    gameType="Ditial PS4"
+  ></app-card>
+  <app-card
+    gameLabel="exclusive"
+    gamePrice="R$228,99"
+    gameType="Ditial PS5"
+    gameCover="assets/bt-4.jpg"
+  ></app-card>
+  <app-card
+    gameLabel="exclusive"
+    gamePrice="R$259,90"
+    gameType="Ditial PS5"
+    gameCover="assets/bt-1.jpg"
+  ></app-card>
+  <app-card
+    gameLabel="offer"
+    gamePrice="R$159,90"
+    gameType="Ditial PS5"
+    gameCover="assets/bt-hardline.jpg"
+  ></app-card>
+  <app-card
+    gameLabel="exclusive"
+    gamePrice="R$229,90"
+    gameType="Ditial PS5"
+    gameCover="assets/ac-cover.jpg"
+  ></app-card>
 </div>
-ontainer
